# whispering-pixels

./: README.md
cc/: README.md
cc/agx/receiver/LeakRegister/MetalComputeBasic/: FIndMetalShaderPage.cpp  FIndMetalShaderPage.hpp  FindMetalShaderPage.c  FindMetalShaderPage.h  MetalAdder.m  main.m  test_shader.metal
cc/agx/receiver/LeakRegister/MetalComputeBasic.xcodeproj/: project.pbxproj
cc/agx/sender/MetalLeakVictim/MetalComputeBasic/: MetalAdder.m  main.m  testshader.metal
cc/agx/sender/MetalLeakVictim/MetalComputeBasic.xcodeproj/: project.pbxproj
cc/nv/: build.sh  leak_kernel
cc/nv/kernel/: build.sh  receiver_kernel  receiver_kernel.cu  receiver_kernel2
cc/nv/recv/: Cuda copy.cpp  Cuda.cpp
cc/nv/send/: Victim.cpp  victim_kernel.cu
cc/qc/CovertChannelReceiver/: settings.gradle
cc/qc/CovertChannelReceiver/app/: build.gradle
cc/qc/CovertChannelReceiver/app/src/androidTest/java/com/example/covertchannelreceiver/: ExampleInstrumentedTest.kt
cc/qc/CovertChannelReceiver/app/src/main/: AndroidManifest.xml
cc/qc/CovertChannelReceiver/app/src/main/cpp/: CMakeLists.txt  covertchannelreceiver.cpp
cc/qc/CovertChannelReceiver/app/src/main/java/com/example/covertchannelreceiver/: MainActivity.kt
cc/qc/CovertChannelReceiver/app/src/main/java/com/example/covertchannelreceiver/ui/theme/: Color.kt  Theme.kt  Type.kt
cc/qc/CovertChannelReceiver/app/src/main/res/values/: strings.xml  themes.xml
cc/qc/CovertChannelReceiver/app/src/test/java/com/example/covertchannelreceiver/: ExampleUnitTest.kt
cc/qc/CovertChannelReceiver/gradle/wrapper/: gradle-wrapper.properties
cc/qc/CovertChannelSender/: settings.gradle
cc/qc/CovertChannelSender/app/: build.gradle
cc/qc/CovertChannelSender/app/src/androidTest/java/com/example/covertchannelsender/: ExampleInstrumentedTest.kt
cc/qc/CovertChannelSender/app/src/main/: AndroidManifest.xml
cc/qc/CovertChannelSender/app/src/main/cpp/: CMakeLists.txt  covertchannelsender.cpp
cc/qc/CovertChannelSender/app/src/main/java/com/example/covertchannelsender/: MainActivity.kt
cc/qc/CovertChannelSender/app/src/main/java/com/example/covertchannelsender/ui/theme/: Color.kt  Theme.kt  Type.kt
cc/qc/CovertChannelSender/app/src/main/res/values/: strings.xml  themes.xml
cc/qc/CovertChannelSender/app/src/test/java/com/example/covertchannelsender/: ExampleUnitTest.kt
cc/qc/CovertChannelSender/gradle/wrapper/: gradle-wrapper.properties
cnn/: README.md  notes.txt
cnn/AttackerApp/: notes.txt
cnn/AttackerApp/app/src/main/java/com/example/testapp/: MainActivity.kt
cnn/AttackerApp/gradle/wrapper/: gradle-wrapper.properties
cnn/NeuralNetLeakVictim/app/: build.gradle
cnn/NeuralNetLeakVictim/app/src/androidTest/java/com/example/neuralnetleakvictim/: ExampleInstrumentedTest.kt
cnn/NeuralNetLeakVictim/app/src/main/: AndroidManifest.xml
cnn/NeuralNetLeakVictim/app/src/main/assets/: conv.glsl  fc.glsl  relu.glsl
cnn/NeuralNetLeakVictim/app/src/main/cpp/: CMakeLists.txt  neuralnetleakvictim.cpp
cnn/NeuralNetLeakVictim/app/src/main/res/values/: themes.xml
cnn_attack/: README.md  show_leak.py
cnn_attack/AttackerApp/app/: build.gradle
cnn_attack/AttackerApp/app/src/main/cpp/: CMakeLists.txt  p_a_opencl.cpp
cnn_attack/AttackerApp/app/src/main/cpp/include/: cl_stub.h
cnn_attack/AttackerApp/app/src/main/cpp/include/CL/: cl.h  cl_ext.h
cnn_attack/NeuralNetLeakVictim/: settings.gradle
cnn_attack/NeuralNetLeakVictim/app/src/main/assets/: net.glsl  pool.glsl
cnn_attack/NeuralNetLeakVictim/app/src/main/java/com/example/neuralnetleakvictim/: MainActivity.kt
cnn_attack/NeuralNetLeakVictim/app/src/main/java/com/example/neuralnetleakvictim/ui/theme/: Color.kt  Theme.kt  Type.kt
cnn_attack/NeuralNetLeakVictim/app/src/main/res/raw/: net.glsl
cnn_attack/NeuralNetLeakVictim/app/src/main/res/values/: strings.xml
cnn_attack/NeuralNetLeakVictim/app/src/test/java/com/example/neuralnetleakvictim/: ExampleUnitTest.kt
cnn_attack/NeuralNetLeakVictim/gradle/wrapper/: gradle-wrapper.properties
frag/: compute.glsl  gles_compute2.c  merge.py  notes.txt  sdl_test.cpp  show_all_fragments.py  show_seen_fragments.py
fragment/: README.md  export_for_sort.py  frag2.py  gaps.diff  gles_compute2.c  sdl_test.cpp  show_seen_fragments.py
gpt2_attack/: README.md  convert_np_to_bin.py  find_embedding.cpp  tinygrad.diff
gpt2_attack/attacker/: Executor.cpp
gpt2_attack/attacker_kernels/: test2
llm/: .gitignore  find_embedding.cpp  leaked_tokens_to_text.py
llm/attacker/: Cuda.cpp
llm/attacker_kernels/: test2.cu
